[package]
name = "static-cond"
version = "0.2.1"
authors = ["Alex Burka <aburka@seas.upenn.edu>"]

description = "Macro for performing comparisons during macro expansion"
categories = ["rust-patterns"]
homepage = "https://github.com/durka/static-cond"
repository = "https://github.com/durka/static-cond"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["static", "if", "macro"]

[dependencies]
